# weather-app

./: Dockerfile  README.md  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
charts/weather-chart/: values.yaml
charts/weather-chart/templates/: deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
kubernetes-manifests/: weather-deployment.yaml  weather-pod-disruption-budget.yaml  weather-scaling.yaml  weather-service.yaml
weather_app/: app.py
